[tool.poetry]
name = "fastapi-sdk"
version = "1.1.3"
description = ""
authors = ["iYasha <33287747+iYasha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
aiosmtplib = "^2.0.0"
databases = "^0.6.2"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
